# turion-take-home

./: .gitignore  README.md  TakehomeReadme.md  docker-compose.yml
api/: Dockerfile  package-lock.json  package.json
api/src/: app.module.ts  main.ts
api/src/csp-header/: csp-header.controller.spec.ts  csp-header.controller.ts  csp-header.entity.ts  csp-header.module.ts  csp-header.service.spec.ts  csp-header.service.ts
api/src/live-telemetry/: live-telemetry.gateway.spec.ts  live-telemetry.gateway.ts  live-telemetry.module.ts
api/src/redis/: redis.service.ts
api/src/satellite/: satellite.controller.spec.ts  satellite.controller.ts  satellite.entity.ts  satellite.module.ts  satellite.service.ts
api/src/telemetry-packet/: telemetry-packet.controller.spec.ts  telemetry-packet.controller.ts  telemetry-packet.entity.ts  telemetry-packet.module.ts  telemetry-packet.service.spec.ts  telemetry-packet.service.ts
types/: CspHeader.ts  Satellite.ts  TelemetryPacket.ts
udp-message-generator/: Cargo.toml  Dockerfile
udp-message-generator/src/: main.rs
udp-server/: Cargo.toml  Dockerfile
udp-server/sql/: setup_database.sql
udp-server/src/: main.rs
udp-server/src/models/: csp_header.rs  mod.rs  telemetry_packet.rs
ui/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  api.ts  constants.ts  global.css  listenerMiddleware.ts  main.tsx  store.ts  theme.ts  utils.ts  websocket.ts
ui/src/components/: CustomTable.tsx  DateSelect.tsx  HistoricalData.tsx  LiveData.tsx  RenderView.tsx  SatelliteSelect.tsx  (+2 more)
(+7 files in other folders)
